kubernetes/apps/network/pihole/app/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: network
subsets:
- addresses:
  - ip: 192.168.8.117
  ports:
  - name: pihole
    port: 80
    protocol: TCP
