kubernetes/apps/network/pihole/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: network
  annotations:
    external-dns.home.arpa/enabled: "true"
    auth.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:pi-hole"
    hajimari.io/group: "Network"
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: external.samcloud.online
spec:
  ingressClassName: external
  rules:
    - host: &host "pihole.samcloud.online"
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: pihole-production-tls
